# FiT_anomalyDetection

./: CMakeLists.txt  Centrality.cpp  Centrality.hpp  Dockerfile  G_graph.cpp  G_graph.hpp  H_graph.cpp  H_graph.hpp  LocalClusteringCoefficient.cpp  LocalClusteringCoefficient.hpp  PLM.cpp  PLM.hpp  README  README.md  conanfile.txt  globals.hpp  hash_graph.cpp  hash_graph.hpp  history_graph.cpp  history_graph.hpp  main.cpp  metrics.cpp  metrics.hpp  prepare_data.py  run.sh  sorted_degree.cpp  sorted_degree.hpp
docs/: fit.conf
fit/: G_graph.cpp  H_graph.cpp  PLM.cpp  SortedCounter.cpp  history_graph.cpp  main.cpp  metrics.cpp  unit_clean
include/: G_graph.hpp  H_graph.hpp  PLM.hpp  SortedCounter.hpp  csv.hpp  globals.hpp  history_graph.hpp  metrics.hpp
tests/: test.cpp
utils/: add_random_links_redux.py  learning.py  learning_redux_redux.py  prepare_data_redux.py
